# unoidc

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: 0001_init.sql  0002_add_front_channel_logout_uri.sql  0003_add_groups_updated_at.sql  0004_add_system_settings.sql  0005_add_email_verification.sql  0006_add_rate_limits.sql  0007_alter_picture_column.sql  0008_add_password_reset.sql  0009_add_enable_silent_authorize.sql  0010_add_passkey.sql  0011_passwordless_signup.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/crypto/: common.rs  jwt.rs  key_encryption.rs  mod.rs  password.rs  random.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/handler/: admin.rs  auth.rs  health.rs  me.rs  mod.rs  oidc.rs  passkey.rs
backend/src/metrics/: mod.rs
backend/src/middleware/: auth.rs  connect_info.rs  cors.rs  csrf.rs  log_redaction.rs  mod.rs  rate_limit.rs  request_context.rs  security_headers.rs
backend/src/model/: audit_log.rs  authorization_code.rs  client.rs  consent.rs  email_verification.rs  group.rs  jwk.rs  mod.rs  passkey_credential.rs  password_reset_token.rs  refresh_token.rs  session.rs  user.rs  webauthn_challenge.rs
backend/src/repo/: audit_log_repo.rs  auth_code_repo.rs  mod.rs  (+12 more)
backend/tests/: app_boot.rs  auth_login.rs  crypto_password.rs  crypto_random.rs  error_model.rs  generate_audit_logs.sql  identity_smoke.rs  log_redaction.rs  logout_flow.rs  migrations_smoke.rs  observability.rs  oidc_flow.rs  password_change_logout.rs  security_middleware.rs  userinfo.rs
(+65 files in other folders)
